JS adicionado ao código

--- a/index.html
+++ b/index.html
@@ -20,28 +20,36 @@
         <section class="personagens">
             <h1 class="titulo">Selecione um personagem</h1>
             <ul class="lista-de-personagens">
-                <li class="personagem selecionado" id="ciclope">
+                <li class="personagem selecionado" id="ciclope" data-name="Ciclope" data-description="Ele tem o poder de disparar 
+                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
                     <img src="./src/imagens/card-ciclope.jpg" alt="Personagem ciclope">
                 </li>
-                <li class="personagem" id="jean-grey">
+                <li class="personagem" id="jean-grey" data-name="Jean Grey" data-description="Jean Grey é uma mutante nível ômega e o
+                principal avatar da Forã Fenix, no qual manifesta poderes cósmicos. Atelepatia e telecinese.">
                     <img src="./src/imagens/card-jean-grey.jpg" alt="Personagem jean-grey">
                 </li>
-                <li class="personagem" id="lince-negra">
+                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="Ele tem o poder de disparar 
+                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
                     <img src="./src/imagens/card-lince-negra.jpg" alt="Personagem lince-negra">
                 </li>
-                <li class="personagem" id="tempestade">
+                <li class="personagem" id="tempestade" data-name="Tempestade" data-description="Ele tem o poder de disparar 
+                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
                     <img src="./src/imagens/card-tempestade.jpg" alt="Personagem tempestade">
                 </li>
-                <li class="personagem" id="vampira">
+                <li class="personagem" id="vampira" data-name="Vampira" data-description="Ele tem o poder de disparar 
+                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
                     <img src="./src/imagens/card-vampira.jpg" alt="Personagem vampira">
                 </li>
-                <li class="personagem" id="wolverine">
+                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="Ele tem o poder de disparar 
+                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
                     <img src="./src/imagens/card-wolverine.jpg" alt="Personagem wolverine">
                 </li>
-                <li class="personagem" id="noturno">
+                <li class="personagem" id="noturno" data-name="Noturno" data-description="Ele tem o poder de disparar 
+                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
                     <img src="./src/imagens/card-noturno.jpg" alt="Personagem noturno">
                 </li>
-                <li class="personagem" id="magneto">
+                <li class="personagem" id="magneto" data-name="Magneto" data-description="Ele tem o poder de disparar 
+                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
                     <img src="./src/imagens/card-magneto.jpg" alt="Personagem magneto">
                 </li>
             </ul>
@@ -54,6 +62,7 @@
             </div>
         </section>
     </main>
+    <script src="./src/js/index.js"></script>
 
 </body>
 </html>
