Atualizando a descrição dos personagens

--- a/index.html
+++ b/index.html
@@ -20,36 +20,36 @@
         <section class="personagens">
             <h1 class="titulo">Selecione um personagem</h1>
             <ul class="lista-de-personagens">
-                <li class="personagem selecionado" id="ciclope" data-name="Ciclope" data-description="Ele tem o poder de disparar 
-                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
+                <li class="personagem selecionado" id="ciclope" data-name="Ciclope" data-description="O mutante Ciclope, ou Scott Summers,
+                 emite poderosas rajadas ópticas controladas por um visor de quartzo rubi, e é líder os X-Men.">
                     <img src="./src/imagens/card-ciclope.jpg" alt="Personagem ciclope">
                 </li>
                 <li class="personagem" id="jean-grey" data-name="Jean Grey" data-description="Jean Grey é uma mutante nível ômega e o
                 principal avatar da Forã Fenix, no qual manifesta poderes cósmicos. Atelepatia e telecinese.">
                     <img src="./src/imagens/card-jean-grey.jpg" alt="Personagem jean-grey">
                 </li>
-                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="Ele tem o poder de disparar 
-                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
+                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="Lince Negra, também conhecida como 
+                Kitty Pryde, é uma mutante dos X-Men, com a habilidade de se tornar intangível e atravessar objetos.">
                     <img src="./src/imagens/card-lince-negra.jpg" alt="Personagem lince-negra">
                 </li>
-                <li class="personagem" id="tempestade" data-name="Tempestade" data-description="Ele tem o poder de disparar 
-                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
+                <li class="personagem" id="tempestade" data-name="Tempestade" data-description="Tempestade, também conhecida como 
+                Ororo Munroe, é uma mutante dos X-Men com o poder de controlar o clima.
+                ">
                     <img src="./src/imagens/card-tempestade.jpg" alt="Personagem tempestade">
                 </li>
-                <li class="personagem" id="vampira" data-name="Vampira" data-description="Ele tem o poder de disparar 
-                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
+                <li class="personagem" id="vampira" data-name="Vampira" data-description="A mutante Vampira, também conhecida como
+                 Anna Marie, absorve a energia vital de outros seres humanos por toque.">
                     <img src="./src/imagens/card-vampira.jpg" alt="Personagem vampira">
                 </li>
-                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="Ele tem o poder de disparar 
-                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
+                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="O mutante Wolverine, também conhecido como
+                 Logan, é dotado de regeneração celular acelerada e garras retráteis de adamantium.">
                     <img src="./src/imagens/card-wolverine.jpg" alt="Personagem wolverine">
                 </li>
-                <li class="personagem" id="noturno" data-name="Noturno" data-description="Ele tem o poder de disparar 
-                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
+                <li class="personagem" id="noturno" data-name="Noturno" data-description="O mutante Noturno, também chamado Kurt Wagner,
+                 possui pele azul, cauda preênsil e a habilidade de teletransportar-se através das sombras.">
                     <img src="./src/imagens/card-noturno.jpg" alt="Personagem noturno">
                 </li>
-                <li class="personagem" id="magneto" data-name="Magneto" data-description="Ele tem o poder de disparar 
-                rejadas ópticas por um acidente que aconteceu com ele quando criança, mas não consegue controla-los.">
+                <li class="personagem" id="magneto" data-name="Magneto" data-description="O mutante Magneto, também conhecido como Erik Lensherr, controla campos magnéticos e é líder dos mutantes da Irmandade.">
                     <img src="./src/imagens/card-magneto.jpg" alt="Personagem magneto">
                 </li>
             </ul>
